2006-12-27 vincent
* Move catalog related things from erp5_core into this new BT.